添加查询dict接口
